--- a/client/vici/components/MainNavBar/MainNavBar.module.scss
+++ b/client/vici/components/MainNavBar/MainNavBar.module.scss
@@ -4,6 +4,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
+    background: #a0e7e9;
+    border: solid black 0.1px;
 }
 
 .left {
