--- a/client/vici/components/CardBox/CardBoxVerso/CardBoxVerso.module.scss
+++ b/client/vici/components/CardBox/CardBoxVerso/CardBoxVerso.module.scss
@@ -2,17 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3rem;
+    margin: 4rem;
+    font-size: 3rem;
 }
 
 .isKnownAnswerSectionContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 1rem;
 }
 
 .isKnownAnswerSection {
-    width: 40%;
+    width: 100%;
 }
 
 .isKnownAnswerSectionTitle {
@@ -20,12 +22,26 @@
     justify-content: center;
     align-items: center;
     margin: 1rem 0;
+    font-size: 1.5rem;
 }
 
 .btnGroupContainer {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.btnContainer {
+    width: 35%;
+    margin: 0.4rem;
 }
 
 .btn {
     margin: 0.5rem;
+}
+
+.btnLabel {
+    margin: 0 0 0 0.8rem;
 }
