--- a/client/vici/components/NavDrawer/NavDrawer.module.scss
+++ b/client/vici/components/NavDrawer/NavDrawer.module.scss
@@ -9,6 +9,24 @@
 }
 
 .li {
-    margin: 1.8rem 0 0 1.5rem;
+    margin: 5rem 0 0 1.5rem;
     cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.emoji {
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0.3em 0;
+}
+
+.navText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 1em;
+  font-size: 1.6em;
 }
