--- a/client/components/MainNavBar/MainNavBar.module.scss
+++ b/client/components/MainNavBar/MainNavBar.module.scss
@@ -1,5 +1,5 @@
 .container {
-    min-height: 4rem;
+    min-height: 10vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
