--- a/client/components/AuthForm/AuthForm.module.scss
+++ b/client/components/AuthForm/AuthForm.module.scss
@@ -2,13 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.logo {
+    margin: 1rem
 }
 
 .formWrapper {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    margin: 4rem 0;
     width: 50%;
 }
 
