--- a/client/components/CardBox/CardBoxRecto/CardBoxRecto.module.scss
+++ b/client/components/CardBox/CardBoxRecto/CardBoxRecto.module.scss
@@ -5,7 +5,8 @@
     justify-content: center;
     align-items: center;
     margin: 6.5rem 4rem;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+    text-align: center;
 }
 
 .btnSectionContainer {
