--- a/client/app/createCards/page.module.scss
+++ b/client/app/createCards/page.module.scss
@@ -66,6 +66,10 @@
     font-size: 1.5rem;
   }
 
+  .titleText {
+    font-size: 1.3rem;
+  }
+
   .left {
     display: flex;
     width: 50%;
@@ -80,4 +84,5 @@
   .section {
     height: 24rem;
   }
+  
 }
