--- a/client/components/AuthForm/AuthForm.module.scss
+++ b/client/components/AuthForm/AuthForm.module.scss
@@ -1,25 +1,74 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.logo {
-    margin: 1rem
+.wrapper {
+  width: 80%;
+  margin: 2rem;
+}
+
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contentWrapper {
+  padding: 1rem;
+  display: flex;
+  margin: 0 0 2rem 0;
+}
+
+.illustrationContainer {
+  display: none;
+}
+
+.iframeContainer {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56%;
+  position: relative;
+}
+
+.iFrame {
+  position: absolute;
 }
 
 .formWrapper {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 3rem;
+}
+
+.pageTitle {
+  display: flex;
+  justify-content: center;
+  margin: 1.3rem;
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .input {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .noAccountYetText {
-    margin: 1rem 0 0 0;
+  margin: 1rem 0 0 0;
+}
+
+@media screen and (min-width: 40rem) {
+  .illustrationContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+  }
+
+  .formWrapper {
+    width: 50%;
+  }
 }
