--- a/client/components/CardBox/CardBox.module.scss
+++ b/client/components/CardBox/CardBox.module.scss
@@ -33,10 +33,19 @@
 
 .cardTitleText {
     margin: 0 0 0 1rem;
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .nextBtnText {
   display: none;
+}
+
+.cardTitleEmoji {
+    font-size: 2rem;
 }
 
 @media screen and (min-width: 40rem) {
