--- a/client/components/CardsContainer/CardsContainer.module.scss
+++ b/client/components/CardsContainer/CardsContainer.module.scss
@@ -19,4 +19,17 @@
         width: 70%;
         margin: 0 0 0 3rem;
     }
+
+    .filterSkeletonContainer {
+        padding: 0 2rem;
+    }
+
+    .cardsSkeletonContainer {
+        width: 70%;
+        margin: 0 0 0 3rem;
+    }
+
+    .filterSkeletonContainer {
+        width: 30%;
+    }
 }
